# firststep

./: CMakeLists.txt
cmake_patches/: UseJavaCustom.cmake
src/: clock.c  life.c
src/java/coollife/: AnimalGrowingEngine.java  Cell.java  Cells.java  Field.java  LifeEngine.java  LifeMain.java  LifeMainWindow.java  MaximumFoodMigrationTactic.java  MigrationTactic.java  OnlyNorthMigrationTactic.java  PlantGrowingEngine.java  SquareRandomMigrationTactic.java
src/java/firststep/: Canvas.java  Color.java  DoubleXY.java  Font.java  Framebuffer.java  Image.java  IntXY.java  Main.java  Paint.java  Transform.java  Window.java
src/java/firststep/gl3w/: GL3W.java
src/java/firststep/glfw/: Callback.java  CallbackAdapter.java  Exception.java  GLFW.java  GLFWCallback.java  GLFWCallbackAdapter.java  GLFWException.java  GlfwVideoMode.java  VideoMode.java
src/java/firststep/internal/: GL3W.java  GLFW.java  JavaTools.java  NVG.java  OS.java
src/java/firststep/nvg/: Color.java  NVG.java  NVGColor.java  NVGPaint.java  Paint.java
src/java/firststep/os/: GlobalConsts.java
src/native/: gl3w-jni.cpp  glfw-jni.cpp  life._c  nanovg-jni.c  os-jni.cpp
